--- a/ecommerce/views/header.html
+++ b/ecommerce/views/header.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Hcode Store</title>
-</head>
-<body>
+	<head>
+		<title>Hello</title>
+	</head>
+	<body>
+		
